--- a/src/components/LogIn/LogIn.css
+++ b/src/components/LogIn/LogIn.css
@@ -19,3 +19,15 @@
 .commonColor{
     color:#0069D9
 }
+.icon-img{
+    height: 80px;
+    display: block;
+    margin: 0 auto;
+    margin-top: 100px;
+}
+.card-style{
+    width: 25rem;
+    margin: 0 auto;
+    margin-top: 50px;
+    text-align: center;
+}
