show registered volunteer

--- a/src/components/VolunteerType/VolunteerType.css
+++ b/src/components/VolunteerType/VolunteerType.css
@@ -1,9 +1,9 @@
-.card-body{
+.volunteerEventsName{
     background-color: #0069D9;
     color: #fff;
     border-radius: 10px;
     text-align: center;
 }
-.card{
+.volunteerEvents{
     border-radius: 10px;
 }
